--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,28 @@
+<style>
+
+h6 {
+  color: #ff8474;
+}
+
+body {
+  background-color: #e1f1dd;
+  font-family: 'Comfortaa', cursive;
+}
+
+h3 {
+  color: #766161;
+}
+
+h1 {
+  color: #87a7b3;
+  font: comfortaa;
+}
+
+hr {
+  border: 0px;
+  border-top: 7px dotted #cdc7be;
+  width: 6%;
+ }
+
+</style>
 
